--- a/package.json
+++ b/package.json
@@ -1,19 +1,38 @@
 {
-  "name": "frontend",
-  "version": "1.0.0",
-  "description": "uwezo frontend app",
-  "main": "index.js",
+  "name": "uwezosacco",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
+  },
   "scripts": {
-    "test": "npm test"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/uwezosaccogroup/frontend.git"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
-  "author": "group three",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/uwezosaccogroup/frontend/issues"
-  },
-  "homepage": "https://github.com/uwezosaccogroup/frontend#readme"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
