--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "uwezo frontend app",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "start": "react-scripts start"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,28 @@
   "bugs": {
     "url": "https://github.com/uwezosaccogroup/frontend/issues"
   },
-  "homepage": "https://github.com/uwezosaccogroup/frontend#readme"
+  "homepage": "https://github.com/uwezosaccogroup/frontend#readme",
+  "dependencies": {
+    "axios": "^1.3.4",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.2"
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
