--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.3.4",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
-    "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-slick": "^0.29.0",
+    "react-scripts": "5.0.1",
+    "semantic-ui-react": "^2.1.4",
+    "slick-carousel": "^1.8.1"
     "react-slick": "^0.29.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
